--- a/.editorconfig
+++ b/.editorconfig
@@ -21,4 +21,6 @@ trim_trailing_whitespace = false
 
 [package.json]
 indent_style = space
+
+[*.{css, scss, less, js, jsx, json, ts, tsx, sass, php, html, hbs, mustache, phtml, html.twig}]
 indent_size = 2
