--- a/.huskyrc
+++ b/.huskyrc
@@ -1,6 +1,6 @@
 {
   "hooks": {
-     "pre-commit": "lint-staged",
+     "pre-commit": "tsc --noEmit && lint-staged",
      "pre-push": "yarn run test"
   }
 }
