--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jhipster",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Description for jhipster",
   "private": true,
   "license": "UNLICENSED",
@@ -8,12 +8,13 @@
     "node_modules"
   ],
   "dependencies": {
-    "@fortawesome/react-fontawesome": "0.1.3",
     "@fortawesome/fontawesome-svg-core": "1.2.4",
     "@fortawesome/free-solid-svg-icons": "5.3.1",
+    "@fortawesome/react-fontawesome": "0.1.3",
     "availity-reactstrap-validation": "2.0.6",
     "axios": "0.18.0",
     "bootstrap": "4.1.3",
+    "cz-conventional-changelog": "^3.0.2",
     "loaders.css": "0.1.2",
     "lodash": "4.17.10",
     "moment": "2.22.2",
@@ -40,6 +41,7 @@
     "uuid": "3.3.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.2.0",
     "@types/enzyme": "3.1.13",
     "@types/jest": "23.3.1",
     "@types/lodash": "4.14.116",
@@ -77,20 +79,21 @@
     "mini-css-extract-plugin": "0.4.2",
     "moment-locales-webpack-plugin": "1.0.7",
     "optimize-css-assets-webpack-plugin": "5.0.0",
+    "postcss-loader": "3.0.0",
     "prettier": "1.14.3",
     "react-infinite-scroller": "1.2.0",
     "redux-mock-store": "1.5.3",
     "rimraf": "2.6.2",
+    "sass": "1.13.0",
+    "sass-loader": "7.1.0",
     "simple-progress-webpack-plugin": "1.1.2",
     "sinon": "6.1.5",
     "source-map-loader": "0.2.4",
     "sourcemap-istanbul-instrumenter-loader": "0.2.0",
+    "standard-version": "^7.0.1",
     "stripcomment-loader": "0.1.0",
     "style-loader": "0.22.1",
     "swagger-ui": "2.2.10",
-    "postcss-loader": "3.0.0",
-    "sass": "1.13.0",
-    "sass-loader": "7.1.0",
     "terser-webpack-plugin": "1.0.2",
     "thread-loader": "1.2.0",
     "to-string-loader": "1.1.5",
@@ -143,10 +146,25 @@
     "webpack:prod": "npm run cleanup && npm run webpack:prod:main",
     "webpack:test": "npm run test",
     "webpack-dev-server": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "webpack": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js"
+    "webpack": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js",
+    "ct": "git-cz",
+    "precommit": "lint-staged",
+    "commitmsg": "commitlint -e $GIT_PARAMS",
+    "release": "standard-version"
   },
   "jestSonar": {
     "reportPath": "target/test-results/jest",
     "reportFile": "TESTS-results-sonar.xml"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "standard-version": {
+    "skip": {
+      "commit": true,
+      "tag": true
+    }
   }
 }
