--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jhipster",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Description for jhipster",
   "private": true,
   "license": "UNLICENSED",
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
     "@types/enzyme": "3.1.13",
     "@types/jest": "23.3.1",
     "@types/lodash": "4.14.116",
