--- a/package.json
+++ b/package.json
@@ -1,12 +1,46 @@
 {
   "name": "jhipster",
   "version": "0.0.2",
-  "description": "Description for jhipster",
   "private": true,
+  "description": "Description for jhipster",
   "license": "UNLICENSED",
-  "cacheDirectories": [
-    "node_modules"
-  ],
+  "scripts": {
+    "cleanup": "rimraf target/www",
+    "commitmsg": "commitlint -e $GIT_PARAMS",
+    "ct": "git-cz",
+    "jest": "jest --coverage --logHeapUsage --maxWorkers=2 --config src/test/javascript/jest.conf.js",
+    "jest:update": "npm run jest -- --updateSnapshot",
+    "lint": "tslint --project tsconfig.json -e 'node_modules/**'",
+    "lint:fix": "npm run lint -- --fix",
+    "precommit": "lint-staged",
+    "prettier:format": "prettier --write \"{,src/**/}*.{md,json,ts,tsx,css,scss}\"",
+    "release": "standard-version",
+    "start": "npm run webpack:dev",
+    "start-tls": "npm run webpack:dev -- --env.tls",
+    "test": "npm run lint && npm run jest",
+    "test-ci": "npm run lint && npm run jest:update",
+    "test:watch": "npm test -- --watch",
+    "webpack": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js",
+    "webpack-dev-server": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "webpack:build": "npm run cleanup && npm run webpack:build:main",
+    "webpack:build:main": "npm run webpack -- --config webpack/webpack.dev.js --env.stats=minimal",
+    "webpack:dev": "npm run webpack-dev-server -- --config webpack/webpack.dev.js --inline --port=9060 --env.stats=minimal",
+    "webpack:dev-verbose": "npm run webpack-dev-server -- --config webpack/webpack.dev.js --inline --port=9060 --profile --progress --env.stats=normal",
+    "webpack:prod": "npm run cleanup && npm run webpack:prod:main",
+    "webpack:prod:main": "npm run webpack -- --config webpack/webpack.prod.js --profile",
+    "webpack:test": "npm run test"
+  },
+  "lint-staged": {
+    "{,src/**/}*.{md,json,ts,tsx,css,scss}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.4",
     "@fortawesome/free-solid-svg-icons": "5.3.1",
@@ -14,11 +48,10 @@
     "availity-reactstrap-validation": "2.0.6",
     "axios": "0.18.0",
     "bootstrap": "4.1.3",
-    "cz-conventional-changelog": "^3.0.2",
     "loaders.css": "0.1.2",
     "lodash": "4.17.10",
     "moment": "2.22.2",
-    "react": "16.4.2",
+    "react": "16.5.0",
     "react-addons-css-transition-group": "16.0.0-alpha.3",
     "react-addons-transition-group": "16.0.0-alpha.3",
     "react-dom": "16.4.2",
@@ -61,6 +94,7 @@
     "core-js": "2.5.7",
     "cross-env": "5.2.0",
     "css-loader": "1.0.0",
+    "cz-conventional-changelog": "^3.0.2",
     "enzyme": "3.5.0",
     "enzyme-adapter-react-16": "1.3.0",
     "enzyme-to-json": "3.3.4",
@@ -121,46 +155,12 @@
   "engines": {
     "node": ">=8.9.0"
   },
-  "lint-staged": {
-    "{,src/**/}*.{md,json,ts,tsx,css,scss}": [
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "scripts": {
-    "prettier:format": "prettier --write \"{,src/**/}*.{md,json,ts,tsx,css,scss}\"",
-    "lint": "tslint --project tsconfig.json -e 'node_modules/**'",
-    "lint:fix": "npm run lint -- --fix",
-    "cleanup": "rimraf target/www",
-    "start": "npm run webpack:dev",
-    "start-tls": "npm run webpack:dev -- --env.tls",
-    "jest": "jest --coverage --logHeapUsage --maxWorkers=2 --config src/test/javascript/jest.conf.js",
-    "jest:update": "npm run jest -- --updateSnapshot",
-    "test": "npm run lint && npm run jest",
-    "test-ci": "npm run lint && npm run jest:update",
-    "test:watch": "npm test -- --watch",
-    "webpack:dev": "npm run webpack-dev-server -- --config webpack/webpack.dev.js --inline --port=9060 --env.stats=minimal",
-    "webpack:dev-verbose": "npm run webpack-dev-server -- --config webpack/webpack.dev.js --inline --port=9060 --profile --progress --env.stats=normal",
-    "webpack:build:main": "npm run webpack -- --config webpack/webpack.dev.js --env.stats=minimal",
-    "webpack:build": "npm run cleanup && npm run webpack:build:main",
-    "webpack:prod:main": "npm run webpack -- --config webpack/webpack.prod.js --profile",
-    "webpack:prod": "npm run cleanup && npm run webpack:prod:main",
-    "webpack:test": "npm run test",
-    "webpack-dev-server": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "webpack": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js",
-    "ct": "git-cz",
-    "precommit": "lint-staged",
-    "commitmsg": "commitlint -e $GIT_PARAMS",
-    "release": "standard-version"
-  },
+  "cacheDirectories": [
+    "node_modules"
+  ],
   "jestSonar": {
     "reportPath": "target/test-results/jest",
     "reportFile": "TESTS-results-sonar.xml"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   },
   "standard-version": {
     "skip": {
