perf: hide chore section

--- a/.versionrc.json
+++ b/.versionrc.json
@@ -3,7 +3,7 @@
     {
       "type": "chore",
       "section": "Others",
-      "hidden": false
+      "hidden": true
     },
     {
       "type": "revert",
